test/testdata/number/invalid_property_assignment_error.lox
2.y = 1; // error: property assignment is not valid for 'number' value
